--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,22 @@
 cmake_minimum_required(VERSION 3.30)
 project(ACTS LANGUAGES C CXX ASM)
 
-# C++ standard
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Optimization flags (Release mode)
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -mtune=native -funroll-loops -ffast-math")
-set(CMAKE_C_FLAGS_RELEASE "-O3 -march=native -mtune=native -funroll-loops -ffast-math")
-set(CMAKE_ASM_FLAGS_RELEASE "-O3 -march=native -mtune=native")
-find_package(Threads REQUIRED)
-# Include headers
-include_directories(${CMAKE_SOURCE_DIR}/include)
-
-# Assembly source
+# Enable all compiler optimizations
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -mtune=native -Wall -Wextra")
+# Enable ASM_NASM
 enable_language(ASM_NASM)
-set(ASM_SOURCES
-    ${CMAKE_SOURCE_DIR}/asm/avx_stress.asm
-)
+# Add include directory
+include_directories(include)
 
-# C++ source
-set(CPP_SOURCES
-    ${CMAKE_SOURCE_DIR}/src/main.cpp
-)
+# Add assembly source file (adjust if you have more)
+file(GLOB ASM_SRC "asm/*.asm")
 
-# Executable target
-add_executable(ACTS ${CPP_SOURCES})
+# Add executable
+add_executable(ACTS src/main.cpp ${ASM_SRC})
 
-# Optional: Rename the output binary
-set_target_properties(ACTS PROPERTIES OUTPUT_NAME "acts")
+# NASM support (if using NASM)
+set_property(SOURCE ${ASM_SRC} PROPERTY LANGUAGE ASM_NASM)
